feat: add validations in the front

--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -198,6 +198,35 @@ button.btn-add :not(:disabled) {
     border-color: rgba(195, 147, 155, 0.25);
 }
 
+/* VALIDATIONS FRONT */
+
+.errors{
+    color: #dc3545;
+    font-weight: bold;
+    font-style: italic;
+    font-size: 13px;
+}
+
+.form-control.is-invalid {
+    color: #dc3545;
+}
+
+.form-control.is-valid {
+    color: #198754;
+}
+
+.in-error {
+    color: #dc3545;
+    font-weight: 400;
+}
+
+.correct {
+    color: #198754;
+}
+
+.form-control.is-invalid:focus {
+    box-shadow: 0 0 0 0.25rem rgba(224, 53, 81, 0.45);
+}
 
 
 
